@@ -14,10 +14,6 @@
  * ====================================================
  */
 
-#if defined(LIBM_SCCS) && !defined(lint)
-static char rcsid[] = "$NetBSD: $";
-#endif
-
 /*
  * scalbnl (long double x, int n)
  * scalbnl(x,n) returns x* 2**n  computed by  exponent
@@ -28,44 +24,36 @@ static char rcsid[] = "$NetBSD: $";
 #include "math.h"
 #include "math_private.h"
 
-#ifdef __STDC__
 static const long double
-#else
-static long double
-#endif
 two63   =  4.50359962737049600000e+15,
 twom63  =  1.08420217248550443400e-19,
 huge   = 1.0e+4900L,
 tiny   = 1.0e-4900L;
 
-#ifdef __STDC__
-	long double __scalblnl (long double x, long int n)
-#else
-	long double __scalblnl (x,n)
-	long double x; long int n;
-#endif
+long double
+__scalblnl (long double x, long int n)
 {
 	int32_t k,es,hx,lx;
 	GET_LDOUBLE_WORDS(es,hx,lx,x);
-        k = es&0x7fff;				/* extract exponent */
-        if (k==0) {				/* 0 or subnormal x */
-            if ((lx|(hx&0x7fffffff))==0) return x; /* +-0 */
+	k = es&0x7fff;				/* extract exponent */
+	if (__builtin_expect(k==0, 0)) {	/* 0 or subnormal x */
+	    if ((lx|(hx&0x7fffffff))==0) return x; /* +-0 */
 	    x *= two63;
 	    GET_LDOUBLE_EXP(es,x);
 	    k = (hx&0x7fff) - 63;
 	    }
-        if (k==0x7fff) return x+x;		/* NaN or Inf */
-        k = k+n;
-        if (n> 50000 || k > 0x7ffe)
+	if (__builtin_expect(k==0x7fff, 0)) return x+x;	/* NaN or Inf */
+	k = k+n;
+	if (__builtin_expect(n> 50000 || k > 0x7ffe, 0))
 	  return huge*__copysignl(huge,x); /* overflow  */
-	if (n< -50000)
+	if (__builtin_expect(n< -50000, 0))
 	  return tiny*__copysignl(tiny,x);
-        if (k > 0) 				/* normal result */
+	if (__builtin_expect(k > 0, 1))		/* normal result */
 	    {SET_LDOUBLE_EXP(x,(es&0x8000)|k); return x;}
-        if (k <= -63)
+	if (k <= -63)
 	    return tiny*__copysignl(tiny,x); 	/*underflow*/
-        k += 63;				/* subnormal result */
+	k += 63;				/* subnormal result */
 	SET_LDOUBLE_EXP(x,(es&0x8000)|k);
-        return x*twom63;
+	return x*twom63;
 }
 weak_alias (__scalblnl, scalblnl)
